--- a/sourcecodes/src/css/overallStyle.css
+++ b/sourcecodes/src/css/overallStyle.css
@@ -42,6 +42,7 @@ html {
 
 .midHeader {
   font-family: "RobotoSlab-SemiBold";
+  font-size: x-large;
   font-weight: 600;
 }
 
@@ -339,4 +340,28 @@ body {
 #mainWrapper footer #footerDetails #socialMediaLinks a {
   color: #99ddff;
   font-weight: 600;
+}
+
+@media (max-width: 768px) {
+  #mainWrapper #introDivInfo nav {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  #mainWrapper #introDivInfo nav ul {
+    padding: 0;
+    margin: 0;
+  }
+  #mainWrapper #projectConcept {
+    width: 100%;
+    padding: 0;
+  }
+  #mainWrapper #projectConcept .sections {
+    width: 98%;
+    margin: 0 auto;
+    min-width: 320px;
+    min-height: 500px;
+    border-radius: 2vw;
+    padding: 20px 12px;
+  }
 }
